crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__block_vs_record_let.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{\n    let y = x * 2\n    y + 1\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Block(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 4,
                    column: 2,
                },
            },
            value: Block {
                stmts: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 18,
                            },
                        },
                        value: Let(
                            LetDecl {
                                pattern: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 10,
                                        },
                                    },
                                    value: Var(
                                        "y",
                                    ),
                                },
                                annotation: None,
                                value: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 18,
                                        },
                                    },
                                    value: BinOps {
                                        operands: [
                                            BinOpOperand {
                                                expr: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 2,
                                                            column: 13,
                                                        },
                                                        end: Position {
                                                            line: 2,
                                                            column: 14,
                                                        },
                                                    },
                                                    value: Var(
                                                        "x",
                                                    ),
                                                },
                                                op: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 2,
                                                            column: 15,
                                                        },
                                                        end: Position {
                                                            line: 2,
                                                            column: 16,
                                                        },
                                                    },
                                                    value: Mul,
                                                },
                                            },
                                        ],
                                        last: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 17,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 18,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 2.0,
                                                    text: "2",
                                                },
                                            ),
                                        },
                                    },
                                },
                            },
                        ),
                    },
                ],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 10,
                            },
                        },
                        value: BinOps {
                            operands: [
                                BinOpOperand {
                                    expr: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 5,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 6,
                                            },
                                        },
                                        value: Var(
                                            "y",
                                        ),
                                    },
                                    op: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 7,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 8,
                                            },
                                        },
                                        value: Add,
                                    },
                                },
                            ],
                            last: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 10,
                                    },
                                },
                                value: Number(
                                    NumberLit {
                                        value: 1.0,
                                        text: "1",
                                    },
                                ),
                            },
                        },
                    },
                ),
            },
        },
    ),
}
