crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__error_equals_not_colon.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{ x = 1 }"
---
Record(
    EqualsNotColon(
        1,
        5,
    ),
    1,
    1,
)
