crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__error_missing_equals.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "Code:\n\n{ x 1 }"
---
Record(
    Equals(
        1,
        5,
    ),
    1,
    1,
)
