crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__error_missing_value.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "Code:\n\n{ x = }"
---
Record(
    Expr(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    1,
)
