crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__error_spread_no_expr.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{ .. }"
---
Record(
    Spread(
        Start(
            1,
            6,
        ),
        1,
        6,
    ),
    1,
    1,
)
