crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__error_trailing_comma.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "Code:\n\n{ x = 1, }"
---
Record(
    Field(
        1,
        10,
    ),
    1,
    1,
)
