crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__error_unclosed.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{ x: 1"
---
Record(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 7,
            },
            unexpected: Position {
                line: 1,
                column: 7,
            },
        },
    ),
    1,
    1,
)
