crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__error_uppercase_field.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{ x: 1, Foo: 2 }"
---
Record(
    Field(
        1,
        9,
    ),
    1,
    1,
)
