crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__mixed_shorthand.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{ id, name: \"Ada\" }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 20,
        },
    },
    value: Record(
        [
            Field {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: "id",
                },
                value: None,
            },
            Field {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: "name",
                },
                value: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 13,
                            },
                            end: Position {
                                line: 1,
                                column: 18,
                            },
                        },
                        value: Str(
                            "Ada",
                        ),
                    },
                ),
            },
        ],
    ),
}
